--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="signup">Sign up</string>
     <string name="submit">Submit</string>
     <string name="back">Back</string>
+    <string name="cPass">Confirm Password</string>
+    <string name="name">Enter Name</string>
 </resources>
